force-app/main/default/objects/invoice_finance_deal__c/invoice_finance_deal__c.object-meta.xml
<CustomObject>
    <label>Invoice Finance Deal</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>invoice ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Finance Deals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>