force-app/main/default/objects/invoice_finance_deal__c/fields/Accounting_Actual_Tenor__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Actual_Tenor__c</fullName>
    <formula>if( TEXT(Phase__c )= &quot;3:IN PROGRESS&quot;, TODAY() -  advance_send_to_supplier_date__c , Actual_Repayment_Received_Date__c - advance_send_to_supplier_date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accounting  Actual Tenor (Din)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>