force-app/main/default/objects/invoice_finance_deal__c/fields/Accounting_Expected_Tenor__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Expected_Tenor__c</fullName>
    <formula>Due_Date__c - advance_send_to_supplier_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accounting Expected Tenor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>