force-app/main/default/objects/invoice_finance_deal__c/fields/Actual_Agent_Com_Ammount_USD__c.field-meta.xml
<CustomField>
    <fullName>Actual_Agent_Com_Ammount_USD__c</fullName>
    <formula>Actual_supplier_s_Agent_Commission_amt__c *
Marketplace_link__r.FX_Rate_for_MI__r.rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected  Agent Com Amount USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>