force-app/main/default/objects/invoice_finance_deal__c/fields/Actual_Agent_Com_Amt_USD__c.field-meta.xml
<CustomField>
    <fullName>Actual_Agent_Com_Amt_USD__c</fullName>
    <formula>IF (expected_financing_period__c =0 ,0, (  Actual_Agent_Com_Ammount_USD__c  /  expected_financing_period__c)* if(  Delta_Actual_repayment_Due_Date__c &gt;0, expected_financing_period__c,  IF ( Delta_Actual_repayment_Due_Date__c &lt;-15, expected_financing_period__c-15,expected_financing_period__c+Delta_Actual_repayment_Due_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Agent Com Amt USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>