force-app/main/default/objects/invoice_finance_deal__c/fields/Actual_FDR_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_FDR_Amount__c</fullName>
    <formula>ROUND(( discount_rate__c /30)*  actual_financing_period__c  * advanced_amount__c ,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual FDR Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>