force-app/main/default/objects/invoice_finance_deal__c/fields/actual_financing_period__c.field-meta.xml
<CustomField>
    <fullName>actual_financing_period__c</fullName>
    <formula>Actual_Repayment_Received_Date__c - advance_send_to_supplier_date__c +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>actual financing period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>