force-app/main/default/objects/invoice_finance_deal__c/fields/Actual_financing_period_for_platform_fee__c.field-meta.xml
<CustomField>
    <fullName>Actual_financing_period_for_platform_fee__c</fullName>
    <formula>IF( Early_payment__c , early_payment_transfer_date__c -advance_send_to_supplier_date__c,Actual_Repayment_Received_Date__c - advance_send_to_supplier_date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual financing period for platform fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>