force-app/main/default/objects/invoice_finance_deal__c/fields/Actual_Funder_Discount_AmountGross_USD__c.field-meta.xml
<CustomField>
    <fullName>Actual_Funder_Discount_AmountGross_USD__c</fullName>
    <formula>discount_amount_paid_to_purchasers2__c * 	 
Marketplace_link__r.FX_Rate_for_MI__r.rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Funder Discount AmountGross USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>