force-app/main/default/objects/invoice_finance_deal__c/fields/Actual_Overdue_Amt_Tolerance_included__c.field-meta.xml
<CustomField>
    <fullName>Actual_Overdue_Amt_Tolerance_included__c</fullName>
    <formula>IF( Tolerance_overdue_days__c =0,invoice_amount__c * (Overdue_Supplier_discount_rate__c/30)*over_due_days__c,  invoice_amount__c * (Overdue_Supplier_discount_rate__c/30)*(over_due_days__c- Tolerance_overdue_days__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Overdue Amt/Tolerance included</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>