force-app/main/default/objects/invoice_finance_deal__c/fields/Actual_Repayment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Repayment_Amount__c</fullName>
    <label>Actual Repayment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>