force-app/main/default/objects/invoice_finance_deal__c/fields/actual_repayment_amount_difference__c.field-meta.xml
<CustomField>
    <fullName>actual_repayment_amount_difference__c</fullName>
    <formula>if (isnull( Actual_Repayment_Received_Date__c),null, Actual_Repayment_Amount__c -  Real_Face_Value__c  - deposit_already_paid__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>actual repayment amount difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>