force-app/main/default/objects/invoice_finance_deal__c/fields/actual_repayment_percentage_difference__c.field-meta.xml
<CustomField>
    <fullName>actual_repayment_percentage_difference__c</fullName>
    <formula>actual_repayment_amount_difference__c /  Real_Face_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>actual repayment percentage difference</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>