force-app/main/default/objects/invoice_finance_deal__c/fields/Actual_Repayment_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Repayment_Received_Date__c</fullName>
    <label>Actual Repayment Received Date</label>
    <type>Date</type>
</CustomField>