force-app/main/default/objects/invoice_finance_deal__c/fields/Actual_supplier_s_Agent_Commission_amt__c.field-meta.xml
<CustomField>
    <fullName>Actual_supplier_s_Agent_Commission_amt__c</fullName>
    <formula>/*If( Supplier_s_Agent_Commission_amount__c == 0, 0, 
If( Contains( Agent_s_fee_type__c, &quot;Part of the supplier discount rate&quot;), Supplier_s_Agent_Commission_amount__c * Actual_total_supplier_discount_amount__c / Total_supplier_discount_amount_expected__c,
Supplier_s_Agent_Commission_amount__c))*/
Supplier_s_Agent_Commission_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual origination Agent Commission amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>