force-app/main/default/objects/invoice_finance_deal__c/fields/Actual_Tenor_Calcul__c.field-meta.xml
<CustomField>
    <fullName>Actual_Tenor_Calcul__c</fullName>
    <description>Used for Weighted average Actual Tenor calcul</description>
    <formula>actual_financing_period__c  *  funded_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for Weighted average Actual Tenor calcul</inlineHelpText>
    <label>Actual Tenor Calcul</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>