force-app/main/default/objects/invoice_finance_deal__c/fields/Actual_total_supplier_discount_amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_total_supplier_discount_amount__c</fullName>
    <formula>Total_supplier_discount_amount_expected__c + If( Actual_Repayment_Received_Date__c &lt; If( IsBlank(Expected_Payment_Date__c), Due_Date__c, Expected_Payment_Date__c),
- Supplier_Cost_Adjustment_early_repayment__c, Amount_Overdue__c)</formula>
    <label>Actual total supplier discount amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>