force-app/main/default/objects/invoice_finance_deal__c/fields/Actual_Total_Supplier_Discount_Amt_USD__c.field-meta.xml
<CustomField>
    <fullName>Actual_Total_Supplier_Discount_Amt_USD__c</fullName>
    <formula>Marketplace_link__r.FX_Rate_for_MI__r.rate__c *  Actual_total_supplier_discount_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Total Supplier Discount Amt  USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>