force-app/main/default/objects/invoice_finance_deal__c/fields/Additional_Charge_0_5__c.field-meta.xml
<CustomField>
    <fullName>Additional_Charge_0_5__c</fullName>
    <formula>( invoice_amount__c * 0.005/30)*over_due_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Charge (0.5%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>