force-app/main/default/objects/invoice_finance_deal__c/fields/Additional_Charge_0_5_USD__c.field-meta.xml
<CustomField>
    <fullName>Additional_Charge_0_5_USD__c</fullName>
    <formula>Additional_Charge_0_5__c * Marketplace_link__r.FX_Rate_for_MI__r.rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Charge (0.5%) USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>