force-app/main/default/objects/invoice_finance_deal__c/fields/Additional_Overdue_Manual_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Additional_Overdue_Manual_Transaction__c</fullName>
    <formula>IF(AND(over_due_days__c&gt;  Tolerance_overdue_days__c,  Manual_New_Overdue_Charge__c =TRUE),( invoice_amount__c * 0.005/30)*over_due_days__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Additional Overdue (+0.5 %) Amount for Manual transaction while waiting for v3 .</inlineHelpText>
    <label>Additional Overdue Manual Transaction</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>