force-app/main/default/objects/invoice_finance_deal__c/fields/advance_amount_usd_equiv__c.field-meta.xml
<CustomField>
    <fullName>advance_amount_usd_equiv__c</fullName>
    <formula>advanced_amount__c *  
  Marketplace_link__r.FX_Rate_for_MI__r.rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>advance amount usd equiv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>