force-app/main/default/objects/invoice_finance_deal__c/fields/advance_send_to_supplier_date__c.field-meta.xml
<CustomField>
    <fullName>advance_send_to_supplier_date__c</fullName>
    <label>advance amount credited to ewallet date</label>
    <type>Date</type>
</CustomField>