force-app/main/default/objects/invoice_finance_deal__c/fields/advanced_amount__c.field-meta.xml
<CustomField>
    <fullName>advanced_amount__c</fullName>
    <formula>case( Phase__c,&apos;3:IN PROGRESS&apos;,funded_amount__c,
               &apos;2:ON MARKETPLACE&apos;,funded_amount__c,
               &apos;4:CLOSED&apos;,funded_amount__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>advanced amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>