force-app/main/default/objects/invoice_finance_deal__c/fields/Agent_Commision_Payout__c.field-meta.xml
<CustomField>
    <fullName>Agent_Commision_Payout__c</fullName>
    <label>Agent Commision Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>