force-app/main/default/objects/invoice_finance_deal__c/fields/Agent_Commission_on_Platform_Fee__c.field-meta.xml
<CustomField>
    <fullName>Agent_Commission_on_Platform_Fee__c</fullName>
    <formula>ROUND(platform_fee_variable_amount__c * Supplier_Buyer_Map__r.Supplier__r.Agent__r.Agent_Commision_Supplier_Platform_Fee__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier&apos;s Agent Com. on Platform Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>