force-app/main/default/objects/invoice_finance_deal__c/fields/Agent_from_the_Map__c.field-meta.xml
<CustomField>
    <fullName>Agent_from_the_Map__c</fullName>
    <label>Agent from the Map</label>
    <length>60</length>
    <type>Text</type>
</CustomField>