force-app/main/default/objects/invoice_finance_deal__c/fields/Agent_s_fee_type__c.field-meta.xml
<CustomField>
    <fullName>Agent_s_fee_type__c</fullName>
    <formula>If( Text( Supplier_Buyer_Map__r.Agent_s_fee_type__c ) == &apos;&apos;, &apos;Part of the supplier discount rate (%)&apos;, text(Supplier_Buyer_Map__r.Agent_s_fee_type__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent&apos;s fee type</label>
    <type>Text</type>
</CustomField>