force-app/main/default/objects/invoice_finance_deal__c/fields/Allocation_Date_Funders__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Date_Funders__c</fullName>
    <label>Expected Funding Date</label>
    <type>Date</type>
</CustomField>