force-app/main/default/objects/invoice_finance_deal__c/fields/Allocation_email_text__c.field-meta.xml
<CustomField>
    <fullName>Allocation_email_text__c</fullName>
    <description>text for Alliocation alert email</description>
    <formula>&quot;Buyer : &quot; + Buyer_text__c + br()+ 
&quot;Invoice Amount : &quot; + text( CCY__c ) + &quot; &quot; + 
IF( invoice_amount__c &gt;= 1000000000, 
TEXT(FLOOR(invoice_amount__c / 1000000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( invoice_amount__c &gt;= 1000000, 
TEXT(FLOOR(invoice_amount__c / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( invoice_amount__c &gt;= 1000, 
RIGHT(TEXT(FLOOR(invoice_amount__c / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(invoice_amount__c)), 3) &amp; &quot;.&quot; &amp; 
IF( MOD(invoice_amount__c , 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(invoice_amount__c , 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(invoice_amount__c , 1), 2) * 100, 99)) 
) + br() + 
&quot;Requested Funding amount : &quot; + text( CCY__c ) + &quot; &quot; + 
IF( requested_amount__c &gt;= 1000000000, 
TEXT(FLOOR(invoice_amount__c / 1000000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( requested_amount__c &gt;= 1000000, 
TEXT(FLOOR(requested_amount__c / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( requested_amount__c &gt;= 1000, 
RIGHT(TEXT(FLOOR(requested_amount__c / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(requested_amount__c)), 3) &amp; &quot;.&quot; &amp; 
IF( MOD(requested_amount__c , 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(requested_amount__c , 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(requested_amount__c , 1), 2) * 100, 99)) 
) + br()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>text for Alliocation alert email</inlineHelpText>
    <label>Allocation email text</label>
    <type>Text</type>
</CustomField>