force-app/main/default/objects/invoice_finance_deal__c/fields/Allocation_Face_Value__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Face_Value__c</fullName>
    <formula>funded_amount__c /  Real_Face_Value__c</formula>
    <label>Allocations / Face Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>