force-app/main/default/objects/invoice_finance_deal__c/fields/allocation_number__c.field-meta.xml
<CustomField>
    <fullName>allocation_number__c</fullName>
    <description>Sum of allocation for this invoice</description>
    <inlineHelpText>Sum of allocation for this invoice</inlineHelpText>
    <label>allocation number</label>
    <summaryFilterItems>
        <field>Invoice_Allocation__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Allocation__c.Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>