force-app/main/default/objects/invoice_finance_deal__c/fields/Amount_Com_Financed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Com_Financed__c</fullName>
    <description>Amount for com calculation when financed</description>
    <formula>advance_amount_usd_equiv__c  /2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Com Financed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>