force-app/main/default/objects/invoice_finance_deal__c/fields/Amount_Com_paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Com_paid__c</fullName>
    <description>AutO calcul if invoice is paid</description>
    <formula>IF(AND(auto_status__c  = &quot;Paid&quot;, RecordType.DeveloperName  &lt;&gt; &quot;Passthrough&quot;),advance_amount_usd_equiv__c /2,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Com paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>