force-app/main/default/objects/invoice_finance_deal__c/fields/Amount_credit_supplier_net_upfront_fees__c.field-meta.xml
<CustomField>
    <fullName>Amount_credit_supplier_net_upfront_fees__c</fullName>
    <formula>ROUND(funded_amount__c-Total_platform_fee__c-Total_supplier_discount_amount_expected__c-credit_insurance_fee__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount credit supplier net upfront fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>