force-app/main/default/objects/invoice_finance_deal__c/fields/Amount_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Amount_Overdue__c</fullName>
    <description>Amount for additional transactions in case of overdue</description>
    <formula>( invoice_amount__c * Overdue_Supplier_discount_rate__c/30)*over_due_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount for additional transactions in case of overdue</inlineHelpText>
    <label>Overdue Supplier Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>