force-app/main/default/objects/invoice_finance_deal__c/fields/Apex_Repaid_Version__c.field-meta.xml
<CustomField>
    <fullName>Apex_Repaid_Version__c</fullName>
    <formula>IF(  Actual_Repayment_Received_Date__c  &lt;  DATEVALUE(&quot;2020-03-17&quot;)  , &quot;V2&quot;, &quot;V3&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apex Version Repayment</label>
    <type>Text</type>
</CustomField>