force-app/main/default/objects/invoice_finance_deal__c/fields/Apex_Version_Financing__c.field-meta.xml
<CustomField>
    <fullName>Apex_Version_Financing__c</fullName>
    <formula>IF( advance_send_to_supplier_date__c &lt;  DATEVALUE(&quot;2020-03-17&quot;)  , &quot;V2&quot;, &quot;V3&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apex Version Financing</label>
    <type>Text</type>
</CustomField>