force-app/main/default/objects/invoice_finance_deal__c/fields/Approval_Needed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Approval_Needed_Reason__c</fullName>
    <label>Approval Needed Reason</label>
    <type>TextArea</type>
</CustomField>