force-app/main/default/objects/invoice_finance_deal__c/fields/Approved_by_CMA__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_CMA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>approved invoices by CMA through CMA Marketplace</description>
    <label>Approved by CMA</label>
    <type>Checkbox</type>
</CustomField>