force-app/main/default/objects/invoice_finance_deal__c/fields/ARPA_Amendment_Signed__c.field-meta.xml
<CustomField>
    <fullName>ARPA_Amendment_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ARPA Amendment Signed</label>
    <type>Checkbox</type>
</CustomField>