force-app/main/default/objects/invoice_finance_deal__c/fields/ArrangerFee__c.field-meta.xml
<CustomField>
    <fullName>ArrangerFee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ArrangerFee</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>