force-app/main/default/objects/invoice_finance_deal__c/fields/Auto_Daily_FX_2__c.field-meta.xml
<CustomField>
    <fullName>Auto_Daily_FX_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field to be able to lauch autonatically the flow update the FX rate after one days</description>
    <inlineHelpText>field to be able to lauch autonatically the flow update the FX rate after one days</inlineHelpText>
    <label>Auto Daily FX 2</label>
    <type>Checkbox</type>
</CustomField>