force-app/main/default/objects/invoice_finance_deal__c/fields/Auto_Daily_FX__c.field-meta.xml
<CustomField>
    <fullName>Auto_Daily_FX__c</fullName>
    <formula>IF ( (ISNULL( advance_send_to_supplier_date__c ) = TRUE), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Daily FX</label>
    <type>Checkbox</type>
</CustomField>