force-app/main/default/objects/invoice_finance_deal__c/fields/Auto_email_payment_reminder__c.field-meta.xml
<CustomField>
    <fullName>Auto_email_payment_reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Click to activate auto e-mail before Due Date and over due</inlineHelpText>
    <label>Auto email payment reminder</label>
    <type>Checkbox</type>
</CustomField>