force-app/main/default/objects/invoice_finance_deal__c/fields/auto_status__c.field-meta.xml
<CustomField>
    <fullName>auto_status__c</fullName>
    <formula>CASE (   text(Phase__c) ,
&apos;1:PRE LISTING&apos;,
         if( !ISPICKVAL(Supplier_Buyer_Map__r.map_onboarding_stage__c,&apos;90.Onboarded&apos;),
            &apos;Risk review&apos;,
             text(Status__c)),

&apos;2:ON MARKETPLACE&apos;,
         if(  Listing_Start__c  &lt;=  now(),
           if ( remaining_amount__c = 0 , 
             if ( Can_send_funds_early__c , 
                  &apos;Funded - waiting for fund distribution to supplier&apos; , 
                  &apos;Funded - waiting for auction finish&apos;),
             &apos;On Marketplace&apos;),
         &apos;On marketplace - waiting for auction to start&apos;),

&apos;3:IN PROGRESS&apos;,
          if( !ISBLANK(Repayment_Agreement__c), &apos;Repayment agreement signed&apos;,
           if( OVERDUE__c , 
              if(  (over_due_days__c &gt;= 60 || text(Status__c) = &apos;Collections&apos;),
                   &apos;Collections&apos;,
                   &apos;Delayed&apos;), 
              &apos;Awaiting due date&apos;)),
     
     text(Status__c)
     )</formula>
    <label>auto Status</label>
    <type>Text</type>
</CustomField>