force-app/main/default/objects/invoice_finance_deal__c/fields/automatically_pay_delta_to_supplier__c.field-meta.xml
<CustomField>
    <fullName>automatically_pay_delta_to_supplier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>automatically pay delta to supplier</label>
    <type>Checkbox</type>
</CustomField>