force-app/main/default/objects/invoice_finance_deal__c/fields/Balance_due__c.field-meta.xml
<CustomField>
    <fullName>Balance_due__c</fullName>
    <formula>Real_Face_Value__c  -  Total_Rebate_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>