force-app/main/default/objects/invoice_finance_deal__c/fields/Balance_for_upfront_fee__c.field-meta.xml
<CustomField>
    <fullName>Balance_for_upfront_fee__c</fullName>
    <formula>if(ispickval( Supplier_Buyer_Map__r.Agent_s_fee_type__c, &quot;Part of the supplier discount rate (%)&quot;),Total_supplier_discount_amount_expected__c-Gross_funder_discount_amount_expected__c-Supplier_s_Agent_Commission_amount__c,Total_supplier_discount_amount_expected__c-Gross_funder_discount_amount_expected__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Fees Expected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>