force-app/main/default/objects/invoice_finance_deal__c/fields/Balance_to_be_credited_to_supplier__c.field-meta.xml
<CustomField>
    <fullName>Balance_to_be_credited_to_supplier__c</fullName>
    <formula>ROUND(Actual_Repayment_Amount__c-funded_amount__c-Premium_total_supplier_discount_amount__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance to be credited to supplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>