force-app/main/default/objects/invoice_finance_deal__c/fields/Bangladesh_special_case__c.field-meta.xml
<CustomField>
    <fullName>Bangladesh_special_case__c</fullName>
    <description>For Ops reminder, copy of map Bangladesh special case in the map</description>
    <formula>TEXT(Supplier_Buyer_Map__r.Bangladesh_special_case__c)</formula>
    <inlineHelpText>For Ops reminder, copy of map Bangladesh special case in the map</inlineHelpText>
    <label>Bangladesh special case</label>
    <type>Text</type>
</CustomField>