force-app/main/default/objects/invoice_finance_deal__c/fields/Bank_Information_for_Payment__c.field-meta.xml
<CustomField>
    <fullName>Bank_Information_for_Payment__c</fullName>
    <formula>IF(Supplier_Buyer_Map__r.is_transwap_bank_account__c =TRUE, 
Supplier_Buyer_Map__r.transwap_bank_account_info__c, 
IF( TEXT(Trustee__c)=&quot;Amicorp Escrow&quot;, 
$Setup.Incomlend_Custom_Settings__c.Payment_Info_Amicorp_Escrow__c, 
IF (TEXT(Trustee__c)=&quot;Amicorp Trust&quot;, 
$Setup.Incomlend_Custom_Settings__c.Payment_Info_Amicorp_Trust__c+$Setup.Incomlend_Custom_Settings__c.Payment_Info_Amicorp_Trust_2__c, 
&quot;&quot;
)))</formula>
    <label>Bank Information for Payment</label>
    <type>Text</type>
</CustomField>