force-app/main/default/objects/invoice_finance_deal__c/fields/bid_in_progress__c.field-meta.xml
<CustomField>
    <fullName>bid_in_progress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>bid in progress</label>
    <type>Checkbox</type>
</CustomField>