force-app/main/default/objects/invoice_finance_deal__c/fields/Bill_of_Lading_No__c.field-meta.xml
<CustomField>
    <fullName>Bill_of_Lading_No__c</fullName>
    <label>Bill of  Lading No.</label>
    <length>250</length>
    <type>Text</type>
</CustomField>