force-app/main/default/objects/invoice_finance_deal__c/fields/BNL_Buyer_Signature_Obtained__c.field-meta.xml
<CustomField>
    <fullName>BNL_Buyer_Signature_Obtained__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BNL Buyer Signature Obtained</label>
    <type>Checkbox</type>
</CustomField>