force-app/main/default/objects/invoice_finance_deal__c/fields/BookReference__c.field-meta.xml
<CustomField>
    <fullName>BookReference__c</fullName>
    <label>BookReference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TASC_NNIP FCT_TB</fullName>
            </value>
            <value>
                <fullName>TASC_FCT 2 EUR_TD_2</fullName>
            </value>
            <value>
                <fullName>TASC_NNIP Flex_TB</fullName>
            </value>
            <value>
                <fullName>NN (L) Flex 1_ORG_USD_TD</fullName>
                <isActive>false</isActive>
                <label>NN (L) Flex 1_ORG_USD_TD</label>
            </value>
            <value>
                <fullName>TASC_NN (L) Flex 1_TD</fullName>
                <isActive>false</isActive>
                <label>TASC_NN (L) Flex 1_TD</label>
            </value>
            <value>
                <fullName>TASC_Series FCT _TD</fullName>
                <isActive>false</isActive>
                <label>TASC_Series FCT _TD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>