force-app/main/default/objects/invoice_finance_deal__c/fields/Buffer_due_days__c.field-meta.xml
<CustomField>
    <fullName>Buffer_due_days__c</fullName>
    <formula>Supplier_Buyer_Map__r.Overdue_days__c</formula>
    <label>Buffer due days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>