force-app/main/default/objects/invoice_finance_deal__c/fields/buyer__c.field-meta.xml
<CustomField>
    <fullName>buyer__c</fullName>
    <formula>hyperlink( Supplier_Buyer_Map__r.Buyer__c, Supplier_Buyer_Map__r.Buyer__r.Name ,&quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>buyer</label>
    <type>Text</type>
</CustomField>