force-app/main/default/objects/invoice_finance_deal__c/fields/Buyer_acknowledgment_details__c.field-meta.xml
<CustomField>
    <fullName>Buyer_acknowledgment_details__c</fullName>
    <label>Buyer acknowledgment details</label>
    <type>TextArea</type>
</CustomField>