force-app/main/default/objects/invoice_finance_deal__c/fields/Buyer_acknowledgment_received_date__c.field-meta.xml
<CustomField>
    <fullName>Buyer_acknowledgment_received_date__c</fullName>
    <label>Buyer acknowledgment received date</label>
    <type>DateTime</type>
</CustomField>