force-app/main/default/objects/invoice_finance_deal__c/fields/Buyer_Address__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Address__c</fullName>
    <formula>Buyer_Name__r.buyer_full_address__c</formula>
    <label>Buyer Address</label>
    <type>Text</type>
</CustomField>