force-app/main/default/objects/invoice_finance_deal__c/fields/Buyer_annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Buyer_annual_Revenue__c</fullName>
    <description>Buyer Annual Revenue USD</description>
    <formula>Supplier_Buyer_Map__r.Buyer_annual_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Buyer Annual Revenue USD</inlineHelpText>
    <label>Buyer annual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>