force-app/main/default/objects/invoice_finance_deal__c/fields/Buyer_Confirmation_Details__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Confirmation_Details__c</fullName>
    <label>Buyer Confirmation Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>