force-app/main/default/objects/invoice_finance_deal__c/fields/Buyer_Confirmation_Status__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Confirmation_Status__c</fullName>
    <label>Buyer Confirmation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Asked yet</fullName>
                <default>true</default>
                <label>Not Asked yet</label>
            </value>
            <value>
                <fullName>Asked waiting for response</fullName>
            </value>
            <value>
                <fullName>Confirmed not accurate</fullName>
            </value>
            <value>
                <fullName>Confirmed Accurate</fullName>
            </value>
            <value>
                <fullName>Response Ambigious</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>