force-app/main/default/objects/invoice_finance_deal__c/fields/Buyer_Confirmed_acceptance__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Confirmed_acceptance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buyer Confirmed acceptance</label>
    <type>Checkbox</type>
</CustomField>