force-app/main/default/objects/invoice_finance_deal__c/fields/Buyer_Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Confirmed_Date__c</fullName>
    <label>Buyer Confirmed Date</label>
    <type>Date</type>
</CustomField>